--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -33,14 +33,13 @@
     </div>
     <div class='policy-knowledgebase-content-wrapper'>
         <div class="policy-knowledgebase-content">
-            <div [class.loader]="knowledgebaseData.length==0 && errorMessage==''"></div>
-            <app-error-message *ngIf="errorMessage" [selectedValue]="errorMessage"></app-error-message>
-            <app-table (rowSelectEventEmitter)="goToDetails($event)" *ngIf="knowledgebaseData.length>0 && errorMessage==''" 
+            <app-table (rowSelectEventEmitter)="goToDetails($event)" 
                 [data]="knowledgebaseData" [columnWidths]="columnWidths"
                 [columnsSortFunctionMap]="columnsSortFunctionMap" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                 [headerColName]="headerColName" [direction]="direction" (searchCalledEventEmitter)="callNewSearch($event)" [searchQuery]="searchPassed"
                 [showSearchBar]="showSearchBar" [showAddRemoveCol]="showAddRemoveCol" (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
-                (searchInColumnsChanged)="handleSearchInColumnsChange($event)" [whiteListColumns]="whiteListColumns" (downloadClicked)="handlePopClick()">
+                (searchInColumnsChanged)="handleSearchInColumnsChange($event)" [whiteListColumns]="whiteListColumns" (downloadClicked)="handlePopClick()" [doLocalSearch]="doLocalSearch"
+                [tableErrorMessage]="errorMessage">
             </app-table>
         </div>
     </div>
