fix: fixed dropdown bug in create asset group page

--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/create-asset-groups/create-asset-groups.component.html
@@ -461,7 +461,7 @@
                                                     <ul class="parameters">
                                                         <label>Select Name :</label>
                                                         <app-dropdown [items]="selectedAttributeDetails"
-                                                            placeholder="Select Name"
+                                                            placeholder="Select Name" [selectedItem]="attributeName"
                                                             (selected)="getTargetTypeAttributeValues($event)">
                                                         </app-dropdown>
                                                     </ul>
@@ -473,7 +473,7 @@
                                                                 class="available"></span>
                                                         </label>
                                                         <app-dropdown [items]="targetTypeAttributeValues"
-                                                            placeholder="Select Value" [(ngModel)]="attributeValue"
+                                                            placeholder="Select Value" [selectedItem]="attributeValue"
                                                             (selected)="selectAttributes($event)">
                                                         </app-dropdown>
                                                     </ul>
