--- a/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
@@ -31,15 +31,15 @@
   </mat-card-header>
   <mat-card-content>
     <div class="chart" *ngIf="card.id == 1">
-      <div [class.loader]="complianceData.length==0 && complianceDataError==''"></div>
-      <app-error-message *ngIf="complianceDataError" [selectedValue]="complianceDataError"></app-error-message>
-      <app-progress-bar-chart *ngIf="complianceDataError=='' && complianceData.length>0" [bars]="complianceData"></app-progress-bar-chart>
+      <div [class.loader]="data.length==0 && dataError==''"></div>
+      <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
+      <app-progress-bar-chart *ngIf="dataError=='' && data.length>0" [bars]="data"></app-progress-bar-chart>
     </div>
     <div class="chart" *ngIf="card.id == 2">
-      <div [class.loader]="!policyData && policyDataError==''"></div>
-      <app-error-message *ngIf="policyDataError" [selectedValue]="policyDataError"></app-error-message>
+      <div [class.loader]="!data && dataError==''"></div>
+      <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
       <div class="graph-chart-cont relative" id="dashboardDoughnut">
-        <app-doughnut-chart *ngIf="policyDataError=='' && policyData" [chartContId]="'dashboardDoughnut'" [graphData]="policyData"
+        <app-doughnut-chart *ngIf="dataError=='' && data" [chartContId]="'dashboardDoughnut'" [graphData]="data"
           [graphWidth]="widgetWidth" [flexTrue]="true" [graphHeight]="widgetHeight" [MainTextcolor]="MainTextcolor"
           [innerRadius]="innerRadius" [outerRadius]="outerRadius" [strokeColor]="strokeColor"
           (navigatePage)="navigateDataTable($event)">
@@ -47,14 +47,14 @@
       </div>
     </div>
     <div class="chart" *ngIf="card.id == 3" style="overflow-y: scroll;">
-      <div [class.loader]="totalAssetsCountData.length==0 && totalAssetsCountDataError==''"></div>
-      <app-error-message *ngIf="totalAssetsCountDataError" [selectedValue]="totalAssetsCountDataError"></app-error-message>
+      <div [class.loader]="data.length==0 && dataError==''"></div>
+      <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
       <div class="chart-wrapper" id="TotalAssetsCountTrend" style="height: 100%; width: 100%; background-color: white;">
-          <app-multiline-zoom-graph *ngIf="totalAssetsCountData.length>0 && totalAssetsCountDataError==''" [id]="'TotalAssetsCountTrend'" [showLegend]="true" [yAxisLabel]="'Total Assets'" [graphHeight]="320" [graphLinesData]="totalAssetsCountData"></app-multiline-zoom-graph>
+          <app-multiline-zoom-graph *ngIf="data.length>0 && dataError==''" [id]="data[0].info.id" [showLegend]="data[0].info.showLegend" [yAxisLabel]="data[0].info.yAxisLabel" [graphHeight]="data[0].info.height" [graphLinesData]="data"></app-multiline-zoom-graph>
       </div>
     </div>
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions *ngIf="card.footer">
     <button mat-button (click)="card.cardButtonAction()">
       {{ card.footer }} <img src="/assets/icons/right-arrow-icon.svg" />
     </button>
